--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ ul {
   padding: 0;
 }
 .container {
-  width: 60vw;
+  width: 90vw;
   max-width: var(--fixedWidth);
   border-radius: var(--radius);
   box-shadow: var(--shadow-1);
@@ -106,3 +106,59 @@ ul {
 Counter
 ===============
 */
+
+nav {
+  height: 4rem;
+  background: var(--accentColor);
+  box-shadow: var(--shadow-2);
+  display: grid;
+  place-items: center;
+}
+.nav-center {
+  width: 90vw;
+}
+.nav-center h2 {
+  margin-bottom: 0;
+  font-weight: 700;
+  color: #fffffe;
+  letter-spacing: var(--spacing);
+}
+main {
+  height: calc(100vh - 4rem);
+  background: var(--backgroundColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background: var(--headingColor);
+  text-align: center;
+  max-width: 450px;
+  padding: 0.5rem;
+}
+.container h2 {
+  font-weight: 700;
+  color: var(--backgroundColor);
+  letter-spacing: var(--spacing);
+  text-transform: uppercase;
+  margin: 1rem 0;
+}
+.value {
+  display: block;
+  font-size: 6rem;
+  font-weight: 700;
+  color: var(--textColor);
+}
+.btn {
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  text-transform: uppercase;
+  font-family: var(--bodyFont);
+  background: var(--btnColor);
+  color: var(--black);
+  border-radius: var(--radius);
+  border: transparent;
+  margin-right: 1rem;
+  margin-bottom: 1.5rem;
+}
